# math-labeler

./: .gitattributes  Makefile  pyproject.toml
data/: Readme-GT.txt
data/ground_truth/: 10.1.1.1.2004_4.xml  10.1.1.1.2004_5.xml  10.1.1.1.2005_12.xml  10.1.1.1.2005_13.xml  10.1.1.1.2005_4.xml  10.1.1.1.2005_7.xml  10.1.1.1.2007_11.xml  10.1.1.1.2007_6.xml  10.1.1.1.2007_7.xml  10.1.1.1.2007_9.xml  10.1.1.1.2016_12.xml  10.1.1.1.2016_8.xml  10.1.1.1.2018_5.xml  10.1.1.1.2020_15.xml  10.1.1.1.2021_5.xml  10.1.1.1.2022_10.xml  10.1.1.1.2022_4.xml  10.1.1.1.2022_6.xml  10.1.1.1.2024_8.xml  10.1.1.1.2026_2.xml  10.1.1.1.2028_10.xml  10.1.1.1.2028_8.xml  10.1.1.1.2032_3.xml  10.1.1.1.2036_4.xml  10.1.1.1.2037_3.xml  10.1.1.1.2040_29.xml  10.1.1.1.2048_17.xml  10.1.1.1.2048_18.xml  10.1.1.1.2048_25.xml  10.1.1.1.2051_3.xml  10.1.1.1.2059_4.xml  10.1.1.1.2059_6.xml  10.1.1.1.2063_12.xml  10.1.1.1.2063_16.xml  10.1.1.1.2063_8.xml  10.1.1.1.2063_9.xml  10.1.1.1.2064_3.xml  10.1.1.1.2065_4.xml  10.1.1.1.2072_3.xml  10.1.1.1.2076_38.xml  (+360 more)
data/image/: 10.1.1.1.2004_4.tif  10.1.1.1.2005_12.tif  10.1.1.1.2005_13.tif  10.1.1.1.2005_4.tif  10.1.1.1.2005_7.tif  10.1.1.1.2007_11.tif  10.1.1.1.2007_6.tif  10.1.1.1.2007_7.tif  10.1.1.1.2007_9.tif  10.1.1.1.2016_12.tif  10.1.1.1.2016_8.tif  10.1.1.1.2018_5.tif  10.1.1.1.2020_15.tif  10.1.1.1.2021_5.tif  10.1.1.1.2022_10.tif  10.1.1.1.2022_4.tif  10.1.1.1.2022_6.tif  10.1.1.1.2024_8.tif  10.1.1.1.2026_2.tif  10.1.1.1.2028_10.tif  (+379 more)
notebooks/: faster_rcnn_1e.pth  faster_rcnn_50e.pth  faster_rcnn_5e.pth  train_model.ipynb
tasks/: prepare.py
(+1220 files in other folders)
