[tool.poetry]
name = "math-labeler"
version = "0.1.0"
description = ""
authors = ["sam <contact@justsam.io>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.15"
pandas = "^1.2.4"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
lxml = "^4.6.3"
scikit-image = "^0.18.1"
imagecodecs = "^2021.4.28"
imagecodecs-lite = "^2020.1.31"
tifffile = "^2021.4.8"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
